feat: create user and update user profile
