# src/main/java/api/prog5/bookwel/repository/model/User.java
@@ -1,12 +1,10 @@
 package api.prog5.bookwel.repository.model;
 
 import static jakarta.persistence.EnumType.STRING;
-import static jakarta.persistence.GenerationType.IDENTITY;
 
 import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.Enumerated;
-import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.Id;
 import jakarta.persistence.Table;
 import java.io.Serializable;
@@ -16,6 +14,7 @@ import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
 import lombok.ToString;
+import org.hibernate.annotations.ColumnTransformer;
 
 @Builder
 @AllArgsConstructor
@@ -27,18 +26,18 @@ import lombok.ToString;
 @Table(name = "user_table")
 public class User implements Serializable {
 
-  @Id
-  @GeneratedValue(strategy = IDENTITY)
-  private String id;
+  @Id private String id;
 
   private String firstName;
   private String lastName;
+  private String firebaseId;
 
   @Column(unique = true)
   private String email;
 
   @Enumerated(STRING)
   @Column(name = "status")
+  @ColumnTransformer(write = "?::user_status")
   private Role role;
 
   public enum Role {
